# bag-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.dashboard.test.tsx  main.investigation.test.tsx  main.local-workflow.test.tsx  main.security.test.tsx  main.shell.test.tsx  main.tsx  main.upload.test.tsx  style.css
frontend/src/components/: ui.tsx
frontend/src/test/: fakeEventSource.ts  fixtures.ts  setup.ts
scripts/: benchmark_analysis_memory.py  probe_codex_structured_output.py  smoke_test_codex_investigator.py  smoke_test_investigator.py
src/bag_doctor/: __init__.py  analysis_workspace.py  analyzer.py  classification.py  cli.py  demo.py  investigator.py  jobs.py  main.py  schemas.py
src/bag_doctor/data/failed_robot_demo/: failed_robot_demo.mcap  metadata.yaml
src/bag_doctor/data/failed_robot_sqlite_demo/: failed_robot_sqlite_demo.db3  metadata.yaml
src/bag_doctor/ingestion/: __init__.py  detector.py  extractor.py  reader.py
src/bag_doctor/web/: index.html
tests/: test_analyzer.py  test_api.py  test_bounded_analysis.py  test_classification.py  test_codex_investigator.py  test_demo_job_api.py  test_ingestion.py  test_investigator.py  test_responses_smoke_script.py  test_static_frontend.py
