[project]
name = "bag-doctor"
version = "0.1.0"
description = "Deterministic ROS 2 bag failure analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116,<1",
    "python-multipart>=0.0.20,<1",
    "rosbags>=0.10,<1",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bag-doctor = "bag_doctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bag_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
